--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -27,4 +27,4 @@ jobs:
     - name: Run MLflow Project
       run: |
         cd MLProject
-        mlflow run . -P data_path=cleaned_data.csv
+        mlflow run . -P data_path=cleaned_data.csv --env-manager=local
