--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -1,9 +1,8 @@
-name: MLflow Project CI
+name: BigMartSales
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -21,8 +20,15 @@ jobs:
         environment-file: MLProject/conda.yaml
         auto-activate-base: false
 
-    - name: Install MLflow
-      run: pip install mlflow dagshub
+    - name: Install dependencies
+      run: |
+        pip install mlflow dagshub
+
+    - name: Export MLflow Environment Variables
+      run: |
+        echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> $GITHUB_ENV
+        echo "MLFLOW_TRACKING_USERNAME=${{ secrets.MLFLOW_TRACKING_USERNAME }}" >> $GITHUB_ENV
+        echo "MLFLOW_TRACKING_PASSWORD=${{ secrets.MLFLOW_TRACKING_TOKEN }}" >> $GITHUB_ENV
 
     - name: Run MLflow Project
       run: |
