--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Commit and push model file to GitHub using Git LFS
       run: |
-        git config --global user.email "sintasitinuriah23@gmail.com""
+        git config --global user.email "sintasitinuriah23@gmail.com"
         git config --global user.name "Sintasitinuriah"
         git lfs install
         git add outputs/linear_model.pkl
