--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -40,6 +40,19 @@ jobs:
         git config --global user.email "sintasitinuriah23@gmail.com"
         git config --global user.name "Sintasitinuriah"
         git lfs install
-        git add outputs/linear_model.pkl
+        git lfs track "mlruns/**"
+        git add .gitattributes
+        git commit -m "Track large files in mlruns with Git LFS" || true
+        git push origin main
+        git add models/linear_model.pkl
         git commit -m "Add trained model (via GitHub Actions)" || echo "No changes to commit"
         git push
+
+    # Save models to GitHub Repository
+    - name: Save mlruns to repo
+      run: |
+        git config --global user.email "sintasitinuriah23@gmail.com"
+        git config --global user.name "Sintasitinuriah"
+        git add -f mlruns/
+        git commit -m "Save mlruns from CI run" || true
+        git push origin main
