--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -46,11 +46,16 @@ jobs:
     #     git commit -m "Add trained model (via GitHub Actions)" || echo "No changes to commit"
     #     git push
 
-    # Save models to GitHub Repository
-    - name: Save mlruns to repo
-      run: |
-        git config --global user.email "sintasitinuriah23@gmail.com"
-        git config --global user.name "Sintasitinuriah"
-        git add -f mlruns/
-        git commit -m "Save mlruns from CI run" || true
-        git push origin main
+    # ✅ Upload model sebagai artifact
+- name: Upload trained model
+  uses: actions/upload-artifact@v3
+  with:
+    name: trained-model
+    path: MLProject/outputs/linear_model.pkl  # atau sesuaikan jika lokasi berbeda
+
+# ✅ Upload folder mlruns sebagai artifact
+- name: Upload MLflow logs
+  uses: actions/upload-artifact@v3
+  with:
+    name: mlflow-logs
+    path: MLProject/mlruns/
