--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -35,6 +35,18 @@ jobs:
         cd MLProject
         mlflow run . -P data_path=cleaned_data.csv --env-manager=local
 
+    - name: Upload trained model
+      uses: actions/upload-artifact@v3
+      with:
+        name: trained-model
+        path: MLProject/outputs/linear_model.pkl
+
+    - name: Upload MLflow logs
+      uses: actions/upload-artifact@v3
+      with:
+        name: mlflow-logs
+        path: MLProject/mlruns/
+
     - name: Commit and push model file to GitHub using Git LFS
       run: |
         git config --global user.email "sintasitinuriah23@gmail.com"
