--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -36,7 +36,7 @@ jobs:
         mlflow run . -P data_path=cleaned_data.csv --env-manager=local
 
     - name: Upload trained model
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v
       with:
         name: trained-model
         path: MLProject/outputs/linear_model.pkl
