--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -36,13 +36,13 @@ jobs:
         mlflow run . -P data_path=cleaned_data.csv --env-manager=local
 
     - name: Upload trained model
-      uses: actions/upload-artifact@v2.3.1
+      uses: actions//upload-pages-artifact@v3
       with:
         name: trained-model
         path: MLProject/outputs/linear_model.pkl
 
     - name: Upload MLflow logs
-      uses: actions/upload-artifact@v2.3.1
+      uses: actions//upload-pages-artifact@v3
       with:
         name: mlflow-logs
         path: MLProject/mlruns/
