--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -47,11 +47,14 @@ jobs:
         name: mlflow-logs
         path: MLProject/mlruns/
 
-    # - name: Commit and push model file to GitHub using Git LFS
-    #   run: |
-    #     git config --global user.email "sintasitinuriah23@gmail.com"
-    #     git config --global user.name "Sintasitinuriah"
-    #     git lfs install
-    #     git lfs track "mlruns/**"
-    #     git commit -m "Track large files in mlruns with Git LFS" || true
-    #     git push origin main
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bigmart-sales:latest .
+
+    - name: Push to Docker Hub
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/bigmart-sales:latest
