connect with dockerhub

--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -54,7 +54,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bigmart-sales:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bigmart-sales:latest MLProject/
 
     - name: Push to Docker Hub
       run: docker push ${{ secrets.DOCKER_USERNAME }}/bigmart-sales:latest
