--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -47,6 +47,11 @@ jobs:
         name: mlflow-logs
         path: MLProject/mlruns/
 
+    - name: Debug Secrets (Hanya untuk Pengujian)
+      run: |
+        echo "DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}"
+        echo "DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}"
+        
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
