--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -26,9 +26,9 @@ jobs:
 
     - name: Export MLflow Environment Variables
       run: |
-        echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" >> $GITHUB_ENV
-        echo "MLFLOW_TRACKING_USERNAME=${{ secrets.MLFLOW_TRACKING_USERNAME }}" >> $GITHUB_ENV
-        echo "MLFLOW_TRACKING_PASSWORD=${{ secrets.MLFLOW_TRACKING_PASSWORD }}" >> $GITHUB_ENV
+        echo "MLFLOW_TRACKING_URI=${{ vars.MLFLOW_TRACKING_URI }}" >> $GITHUB_ENV
+        echo "MLFLOW_TRACKING_USERNAME=${{ vars.MLFLOW_TRACKING_USERNAME }}" >> $GITHUB_ENV
+        echo "MLFLOW_TRACKING_PASSWORD=${{ vars.MLFLOW_TRACKING_PASSWORD }}" >> $GITHUB_ENV
 
     - name: Run MLflow Project
       run: |
@@ -47,19 +47,19 @@ jobs:
         name: mlflow-logs
         path: MLProject/mlruns/
 
-    - name: Debug Secrets (Hanya untuk Pengujian)
+    - name: Debug vars (Hanya untuk Pengujian)
       run: |
-        echo "DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}"
-        echo "DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}"
+        echo "DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}"
+        echo "DOCKER_PASSWORD: ${{ vars.DOCKER_PASSWORD }}"
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ vars.DOCKER_USERNAME }}
+        password: ${{ vars.DOCKER_PASSWORD }}
         
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bigmart-sales:latest MLProject/
+      run: docker build -t ${{ vars.DOCKER_USERNAME }}/bigmart-sales:latest MLProject/
 
     - name: Push to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/bigmart-sales:latest
+      run: docker push ${{ vars.DOCKER_USERNAME }}/bigmart-sales:latest
