--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -62,4 +62,4 @@ jobs:
       run: docker build -t ${{ vars.DOCKER_USERNAME }}/bigmart-sales:latest MLProject/
 
     - name: Push to Docker Hub
-      run: docker push ${{ vars.DOCKER_USERNAME }}/bigmart-sales:latest
+      run: docker push ${{ vars.DOCKER_USERNAME }}/bigmartsales_repository:latest
