--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Get latest MLflow run_id
       run: |
-        RUN_ID=$(ls -td mlruns/0/*/ | head -n 1 | xargs -n 1 basename)
+        RUN_ID=$(ls -td mlruns/0/*/ | head -n 1 | cut -d'/' -f3)
         echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
         echo "Latest run_id: $RUN_ID"
 
