--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -55,8 +55,8 @@ jobs:
 
     - name: Build Docker Model
       run: |
-        mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "cc" 
-
+        echo "Using RUN_ID=$RUN_ID"
+        mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "cc"
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
