--- a/.github/workflows/mlflow-ci.yaml
+++ b/.github/workflows/mlflow-ci.yaml
@@ -30,18 +30,14 @@ jobs:
         echo "MLFLOW_TRACKING_USERNAME=${{ vars.MLFLOW_TRACKING_USERNAME }}" >> $GITHUB_ENV
         echo "MLFLOW_TRACKING_PASSWORD=${{ vars.MLFLOW_TRACKING_PASSWORD }}" >> $GITHUB_ENV
 
-    - name: Run MLflow Project
+    - name: Run MLflow Project and get run_id
       run: |
         cd MLProject
-        # mlflow run . -P data_path=cleaned_data.csv --env-manager=local
-        mlflow run . -P data_path=cleaned_data.csv --env-manager=local | tee mlflow_output.log
+        mlflow run . -P data_path=cleaned_data.csv --env-manager=local | tee output.log
 
-    - name: Get latest MLflow run_id
-      run: |
-        RUN_ID=$(grep 'MLFLOW_RUN_ID=' mlflow_output.log | cut -d'=' -f2)
-
+        RUN_ID=$(grep 'MLFLOW_RUN_ID=' output.log | cut -d'=' -f2)
         echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
-        echo "Latest run_id: $RUN_ID""
+        echo "Latest run_id: $RUN_ID"
 
     - name: Upload trained model
       uses: actions/upload-artifact@v4
